Fixes projects page spacing

--- a/index.css
+++ b/index.css
@@ -79,21 +79,23 @@ a {
   background-color: #f5cac3;
 }
 .fixed-header {
-  padding: 2rem;
+  position: relative;
+  padding: 1rem;
   position: sticky;
   top: 0;
   text-align: center;
   z-index: 1;
 }
 .fixed-footer {
-  padding: 2rem;
+  position: relative;
+  padding: 1rem;
   position: sticky;
   bottom: 0;
   text-align: center;
   z-index: 1;
 }
 .footer {
-  margin: 2rem;
+  margin: 1rem;
   text-align: center;
 }
 @media (max-height: 600px) {
