--- a/styles/about.css
+++ b/styles/about.css
@@ -1,9 +1,9 @@
 .about-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
   gap: 2rem;
   background: #fafafa;
   border-radius: 2rem;
