--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,5 @@
 .projects-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -6,7 +7,6 @@
   border-radius: 2rem;
   gap: 1rem;
   max-width: 90%;
-  margin-bottom: 5rem;
 }
 .project-container {
   display: flex;
